# options-chain-fetcher

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.py  main.py  monitor.py  pyproject.toml  requirements.txt  rules.example.yaml
.github/workflows/: tests.yml
docs/: schwab_setup.md
docs/superpowers/plans/: 2026-05-28-options-expansion.md  2026-06-26-options-alert-monitor.md
docs/superpowers/specs/: 2026-06-26-options-alert-monitor-design.md
examples/: sample_chain.json
src/: alert_state.py  analyzer.py  auth.py  exporter.py  fetcher.py  normalizer.py  notifier.py  parser.py  rules.py
tests/: test_alert_state.py  test_analyzer.py  test_auth.py  test_config.py  test_demo.py  test_exporter.py  test_fetcher.py  test_main.py  test_monitor.py  test_normalizer.py  test_notifier.py  test_parser.py  test_rules.py  test_security.py
